examples/test/testpolicy18395.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18395
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key30: value9
      key23: value49
      key11: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value38
          key43: value34
          key35: value31
      podSelector:
        matchLabels:
          key17: value26
